// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PropTypes.arrayOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          colors
        </_class>
      </td>
      <td>
        <_class>
          string[]
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.instanceOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          num
        </_class>
      </td>
      <td>
        <_class>
          Number
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.shape 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          foo
        </_class>
      </td>
      <td>
        <_class>
          shape
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        >
          <div>
            <_class>
              bar
            </_class>
            : 
            <_class>
              number
            </_class>
             — 
            <span>
              Required
            </span>
          </div>
          <div>
            <_class>
              baz
            </_class>
            : 
            <_class>
              any
            </_class>
          </div>
        </Group>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          color
        </_class>
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string with a default value 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          color
        </_class>
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td>
        <_class>
          pink
        </_class>
      </td>
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string.isRequired 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          color
        </_class>
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td>
        <span>
          Required
        </span>
      </td>
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render description in Markdown 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          color
        </_class>
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        >
          <_class
            inline={true}
            text="Label"
          />
        </Group>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render function body in tooltip 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          fn
        </_class>
      </td>
      <td>
        <_class>
          func
        </_class>
      </td>
      <td>
        <span
          title="(e) => console.log(e)"
        >
          Function
        </span>
      </td>
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render unknown proptype for a prop when a relevant proptype is not assigned 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class>
          color
        </_class>
      </td>
      <td>
        <_class>
          unknown
        </_class>
      </td>
      <td>
        <_class>
          pink
        </_class>
      </td>
      <td
        className="undefined undefined"
      >
        <Group
          separator={<br />}
        />
      </td>
    </tr>
  </tbody>
</table>
`;
